working on serch

--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <title>Blogy</title>
+  <meta name="description" content="Share Your Thought" />
+
+
+  <!-- <meta name="og:title" content="__META_OG_TITLE__" />
+  <meta name="og:organization" content="__ORGANIZATION__" />
+  <meta name="og:city" content="__CITY__" />
+   -->
+  <meta property="og:site_name" content="Blogy" />
+  <meta property="og:title" content="Share Your Thought" />
+  <meta property="og:description" content="Connecting the World with Stories" />
+  <!-- <meta property="og:image" itemprop="image" content="https://firebasestorage.googleapis.com/v0/b/dev-jobboard-gcp.appspot.com/o/MfgworxLogo%2Flogo.png?alt=media&token=532fddfb-f66b-45de-b7ff-4b05c6d6f1e1" /> -->
+  <meta property="og:image" itemprop="image" content="https://firebasestorage.googleapis.com/v0/b/mfgworx.appspot.com/o/OrganisationLogo%2FF266298E-96A5-4EE1-9A2C-B3D2FBF9157F.PNG?alt=media&token=f463c5b2-3f3c-448e-ab22-2c62a18b0329" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:url" content="https://cms-web-app-07.web.app/" />
+  <meta property="og:organization" content="Share Your Thought" />
+  <meta property="og:city" content="Connecting the World with Stories" />
+  <meta property="og:image:width" content="200" />
+  <meta property="og:image:height" content="200" />
+  <meta property="fb:site_name" content="MFGWorx" />
+  <meta property="fb:title" content="True Industrial Hiring" />
+  <meta property="fb:description" content="Connecting the World with Stories" />
+  <meta property="fb:image" itemprop="image" content="https://firebasestorage.googleapis.com/v0/b/mfgworx.appspot.com/o/OrganisationLogo%2FF266298E-96A5-4EE1-9A2C-B3D2FBF9157F.PNG?alt=media&token=f463c5b2-3f3c-448e-ab22-2c62a18b0329" />
+  <meta property="fb:type" content="website" />
+  <meta property="fb:image:type" content="image/png" />
+  <meta property="fb:url" content="https://cms-web-app-07.web.app/" />
+  <meta property="fb:organization" content="Share Your Thought" />
+  <meta property="fb:city" content="Connecting the World with Stories" />
+<meta name="facebook-domain-verification" content="fn95ejpocwh20fmg06nrypy3tfz4ky" />
+<meta property="fb:app_id" content="827931875215624" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
